--- a/CageGame/Base.lproj/LaunchScreen.storyboard
+++ b/CageGame/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,16 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="cage.png" translatesAutoresizingMaskIntoConstraints="NO" id="D2P-9c-RJ4">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="D2P-9c-RJ4" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="6Eb-du-heI"/>
+                            <constraint firstItem="D2P-9c-RJ4" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="VAS-8g-tY0"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +33,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cage.png" width="168" height="168"/>
+    </resources>
 </document>
