--- a/CageGame/Base.lproj/LaunchScreen.storyboard
+++ b/CageGame/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,14 +18,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="cage.png" translatesAutoresizingMaskIntoConstraints="NO" id="D2P-9c-RJ4">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cage-4.png" translatesAutoresizingMaskIntoConstraints="NO" id="D2P-9c-RJ4">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="D2P-9c-RJ4" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-20" id="5F5-AE-1DJ"/>
                             <constraint firstItem="D2P-9c-RJ4" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="6Eb-du-heI"/>
-                            <constraint firstItem="D2P-9c-RJ4" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="VAS-8g-tY0"/>
+                            <constraint firstItem="D2P-9c-RJ4" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" constant="-20" id="VAS-8g-tY0"/>
+                            <constraint firstItem="D2P-9c-RJ4" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="wG5-G1-2Dk"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -34,6 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cage.png" width="168" height="168"/>
+        <image name="cage-4.png" width="120" height="120"/>
     </resources>
 </document>
