--- a/CageGame/Base.lproj/Main.storyboard
+++ b/CageGame/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--CageGame-->
         <scene sceneID="50m-o6-BIX">
             <objects>
-                <tableViewController id="Kaj-5t-i2k" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="Home" id="Kaj-5t-i2k" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="48" sectionFooterHeight="28" id="qU5-zW-hL8">
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -74,7 +74,7 @@
         <!--Images-->
         <scene sceneID="z4Q-xe-BIn">
             <objects>
-                <tableViewController id="5Pd-aS-vlh" customClass="GameSelectViewController" customModule="CageGame" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="GameSelect" id="5Pd-aS-vlh" customClass="GameSelectViewController" customModule="CageGame" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="XyB-PO-0RM">
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
